
[package]
name = "bitcoin"
version = "0.10.10"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "CC0-1.0"
homepage = "https://github.com/apoelstra/rust-bitcoin/"
repository = "https://github.com/apoelstra/rust-bitcoin/"
documentation = "https://www.wpsoftware.net/rustdoc/bitcoin/"
description = "General purpose library for using and interoperating with Bitcoin and other cryptocurrencies."
keywords = [ "crypto", "bitcoin" ]
readme = "README.md"

[lib]
name = "bitcoin"
path = "src/lib.rs"

[features]
serde-decimal = ["serde", "strason"]

[dependencies]
byteorder = "1.1"
num = "0.1"
rand = "0.3"
rust-crypto = "0.2"
bitcoinconsensus = { version = "0.16", optional = true }

[dependencies.serde]
version = "1"
optional = true

[dependencies.strason]
version = "0.4"
optional = true
default-features = false

[dependencies.hex]
git = "https://github.com/KokaKiwi/rust-hex"
rev = "19fd37137686c30058bd9d11d21590e726ffdf31"

[dependencies.secp256k1]
version = "0.11"
features = [ "rand" ]

