
[package]
name = "libbitcoin-zcash"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>. Modified by Ildar Sadykov <irsdkv@gmail.com> INTEC LLC"]
license = "CC0-1.0"
description = "General purpose library for using and interoperating with Zcash."
keywords = [ "crypto", "zcash" ]
readme = "README.md"

[lib]
name = "bitcoin_zcash"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget"]
serde-decimal = ["serde", "strason"]

[dependencies]
bitcoin-bech32 = "0.8.0"
byteorder = "1.1"
rand = "0.3"
rust-crypto = "0.2"
bitcoinconsensus = { version = "0.16", optional = true }
rustc-serialize = "0.3.24"
num-traits = "0.2"
num-derive = "0.2"

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"

[dependencies.serde]
version = "1"
optional = true

[dependencies.strason]
version = "0.4"
optional = true
default-features = false

[dependencies.hex]
git = "https://github.com/KokaKiwi/rust-hex"
rev = "19fd37137686c30058bd9d11d21590e726ffdf31"

[dependencies.secp256k1]
version = "0.10"
features = [ "rand" ]
